[EDIT] Container image to support jdk 17 [FIX] Tomcat JDK 17 config